# atrib

./: .dockerignore  .gitignore  .gitleaks.toml  .oss-twin.yaml  .pre-commit-config.yaml  .prettierignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  DESIGN.md  DOC-SYNC-TRIGGERS.md  GOVERNANCE.md  LICENSE  LOOP.md  METRICS.md  NOTICE  PRIOR-ART.md  README.md  SECURITY.md  STATUS.md  _typos.toml  atrib-handoff-brief.md  atrib-spec.md  eslint.config.js  leakguard.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  textleaks.yaml  tsconfig.base.json
.changeset/: annotates-pipeline-and-auto-detect-informed-by.md  ap2-counterparty-attestation.md  ap2-cross-attestation.md  ap2-vi-constraints.md  ap2-vi-sd-jwt.md  archive-oauth-evidence.md  args-result-commitment-form.md  atrib-context-id-env-honoring.md  atrib-emit-readme-d072-update.md  audit-pass-1-recall-legibility-extension.md  bridge-context-wrappers.md  (+119 more)
python/: LICENSE  README.md  pyproject.toml
python/src/atrib/: __init__.py  anchors.py  attribution.py  canon.py  chain.py  client.py  content_id.py  encoding.py  evidence.py  hashes.py  keys.py  mirror.py  records.py  signing.py  submission.py  token.py  types.py  validation.py
python/tests/: test_addenda.py  test_anchors.py  test_client_behavior.py  test_mirror_corpus.py  test_p045_headroom.py  test_port_parity.py
python/tests/conformance/: test_1_2_3_multi_producer.py  test_1_2_6.py  test_1_4.py  test_2_6_1.py  test_evidence_envelope.py  test_mcp_extension_receipts.py
python/tests/cross_impl/: test_determinism.py
(+799 files in other folders)
